refactor: new dto to make fe easier